rericha_ambulance/samrer-ambulance-webapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samrer-ambulance-webapi
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: samrer-ambulance-webapi-label
  template:
    metadata:
      labels:
        pod: samrer-ambulance-webapi-label
    spec:
      containers:
        - name: samrer-ambulance-webapi-container
          image: cagardap/ambulance-webapi:latest
          imagePullPolicy: Always
          ports:
            - name: webapi-port
              containerPort: 8080
          resources:
            requests:
              memory: "32Mi"
              cpu: "0.1"
            limits:
              memory: "128Mi"
              cpu: "0.3"
