rericha_ambulance/samrer-ambulance-webapi/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: samrer-ambulance-webapi
spec:
  type: ClusterIP
  selector:
    pod: samrer-ambulance-webapi-label
  ports:
    - name: webapi-s-port
      protocol: TCP
      port: 80
      targetPort: 8080
